<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LinearLayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/linearlayout_without_weight"
        tools:ignore="MissingConstraints" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b1"
            android:background="@color/purple_700"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b2"
            android:background="@color/purple_200"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b3"
            android:background="@color/purple_700"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b4"
            android:background="@color/purple_500"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/linearlayout_with_weight"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b5"
            android:layout_weight="1"
            android:background="@color/purple_700"
            tools:ignore="NestedWeights" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b6"
            android:layout_weight="1"
            android:background="@color/purple_200"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b7"
            android:layout_weight="1"
            android:background="@color/purple_700"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b8"
            android:layout_weight="1"
            android:background="@color/purple_500"/>
    </LinearLayout>

</LinearLayout>