<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".RelativeLayout">
    <EditText
        android:id="@+id/remail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"/>
    <EditText
        android:id="@+id/rpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remail"
        android:hint="@string/password"/>
    <LinearLayout
        android:layout_below="@+id/rpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        >
        <Button
            android:id="@+id/br1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            />
        <Button
            android:id="@+id/br2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"/>
    </LinearLayout>
</RelativeLayout>